[gd_scene load_steps=21 format=3 uid="uid://bljf8fqb6j11o"]

[ext_resource type="Script" path="res://enemy/neptune_boss.gd" id="1_f3ia8"]
[ext_resource type="Script" path="res://enemy/neptune_boss_body.gd" id="2_lrdbm"]
[ext_resource type="Texture2D" uid="uid://b6w1hvsbn50v2" path="res://pics/enemy/neptune_boss.png" id="2_tj3lc"]
[ext_resource type="Script" path="res://enemy/state/state_machine.gd" id="3_3rx6x"]
[ext_resource type="Script" path="res://enemy/state/enemy_idle.gd" id="4_16gma"]
[ext_resource type="Script" path="res://enemy/state/enemy_follow.gd" id="5_bj0va"]
[ext_resource type="Texture2D" uid="uid://bhlp2nfixdsnk" path="res://pics/player/status_icon.png" id="7_qbhqm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1pvy5"]
radius = 56.5685

[sub_resource type="CircleShape2D" id="CircleShape2D_dkl3r"]
radius = 33.2415

[sub_resource type="CircleShape2D" id="CircleShape2D_a4nxp"]
radius = 32.1403

[sub_resource type="CircleShape2D" id="CircleShape2D_av236"]
radius = 26.3059

[sub_resource type="CircleShape2D" id="CircleShape2D_e30xi"]
radius = 86.0523

[sub_resource type="CircleShape2D" id="CircleShape2D_e13x2"]
radius = 12.0416

[sub_resource type="CircleShape2D" id="CircleShape2D_qd24m"]
radius = 18.2483

[sub_resource type="Animation" id="Animation_0mjmy"]
resource_name = "attacking"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"speed_up"
}]
}

[sub_resource type="Animation" id="Animation_8hkr5"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("body")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"drop_item"
}]
}

[sub_resource type="Animation" id="Animation_w0ffy"]
resource_name = "drop_idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(0.23, 0.27), Vector2(0.27, 0.23), Vector2(0.25, 0.25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("body:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5uric"]
resource_name = "idle"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6, 2.1, 2.6, 3.1, 5.5, 6, 6.5, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 1), Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 1), Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 2.5, 3, 4.5, 5, 6.5, 7, 8),
"transitions": PackedFloat32Array(1, 0.5, 1, 0.5, 1, 0.5, 1, 0.5, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.54, 0.46), Vector2(0.46, 0.54), Vector2(0.54, 0.46), Vector2(0.46, 0.54), Vector2(0.54, 0.46), Vector2(0.46, 0.54), Vector2(0.54, 0.46), Vector2(0.46, 0.54), Vector2(0.5, 0.5)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"speed_down"
}]
}

[sub_resource type="Animation" id="Animation_fsqir"]
resource_name = "status"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/status:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/status:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -40)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("body/status:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("body/sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("body/status:frame_coords")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0xhs4"]
_data = {
"attacking": SubResource("Animation_0mjmy"),
"dead": SubResource("Animation_8hkr5"),
"drop_idle": SubResource("Animation_w0ffy"),
"idle": SubResource("Animation_5uric"),
"status": SubResource("Animation_fsqir")
}

[node name="neptune_boss" type="Node2D"]
script = ExtResource("1_f3ia8")

[node name="body" type="CharacterBody2D" parent="."]
motion_mode = 1
script = ExtResource("2_lrdbm")

[node name="sprite" type="Sprite2D" parent="body"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_tj3lc")
hframes = 2
vframes = 3

[node name="coll_env" type="StaticBody2D" parent="body"]

[node name="coll_for_env" type="CollisionShape2D" parent="body/coll_env"]
shape = SubResource("CircleShape2D_1pvy5")

[node name="coll2" type="CollisionShape2D" parent="body/coll_env"]
position = Vector2(-38, -13)
shape = SubResource("CircleShape2D_dkl3r")

[node name="coll3" type="CollisionShape2D" parent="body/coll_env"]
position = Vector2(31, -31)
shape = SubResource("CircleShape2D_a4nxp")

[node name="coll4" type="CollisionShape2D" parent="body/coll_env"]
position = Vector2(30, 35)
shape = SubResource("CircleShape2D_av236")

[node name="hitbox" type="Area2D" parent="body" groups=["enemy"]]

[node name="coll" type="CollisionShape2D" parent="body/hitbox"]
shape = SubResource("CircleShape2D_e30xi")
debug_color = Color(0.654902, 0.513726, 0.117647, 0.419608)

[node name="attacked" type="Timer" parent="body/hitbox"]
wait_time = 0.1

[node name="hurtBox" type="Area2D" parent="body" groups=["enemy_attack"]]

[node name="coll" type="CollisionShape2D" parent="body/hurtBox"]
position = Vector2(70, -70)
shape = SubResource("CircleShape2D_e13x2")
debug_color = Color(0.854902, 0.301961, 0.545098, 0.419608)

[node name="coll2" type="CollisionShape2D" parent="body/hurtBox"]
position = Vector2(80, 8)
shape = SubResource("CircleShape2D_e13x2")
debug_color = Color(0.854902, 0.301961, 0.545098, 0.419608)

[node name="coll3" type="CollisionShape2D" parent="body/hurtBox"]
position = Vector2(-34, -79)
shape = SubResource("CircleShape2D_e13x2")
debug_color = Color(0.854902, 0.301961, 0.545098, 0.419608)

[node name="coll4" type="CollisionShape2D" parent="body/hurtBox"]
position = Vector2(-46.676, 71.0844)
shape = SubResource("CircleShape2D_e13x2")
debug_color = Color(0.854902, 0.301961, 0.545098, 0.419608)

[node name="grabBox" type="Area2D" parent="body"]

[node name="coll" type="CollisionShape2D" parent="body/grabBox"]
shape = SubResource("CircleShape2D_qd24m")
debug_color = Color(0.996078, 0.0509804, 0, 0.419608)

[node name="status" type="Sprite2D" parent="body"]
z_index = 2
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_qbhqm")
hframes = 3
vframes = 3
frame = 8

[node name="state_machine" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_3rx6x")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="state_machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("4_16gma")
enemy = NodePath("../../body")
move_speed = 4000
search_range = 400
max_wander_time = 5

[node name="follow" type="Node" parent="state_machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_bj0va")
enemy = NodePath("../../body")
move_speed = 20000
unaggro = 2000
attack_range = 130

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0xhs4")
}

[connection signal="area_entered" from="body/hitbox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="body/hitbox/attacked" to="." method="_on_attacked_timeout"]
[connection signal="area_entered" from="body/grabBox" to="." method="_on_grab_box_area_entered"]
